// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render set badge correctly 1`] = `
<div class="fx-tab-bar">
  <div class="fx-tab-bar_inner fx-horizontal-hairline fixed" style="z-index: 1;">
    <ul class="fx-tab-bar_list">
      <li class="fx-tab-bar_item active">
        <badge-stub content="热" maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <icon-stub icon="HomeOutlined" size="0" width="0" height="0"></icon-stub>
        </badge-stub> <span class="fx-tab-bar_item-text">首页</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub content="1" maxcount="99" dot="true" offset="0,0" class="fx-tab-bar_item-icon">
          <icon-stub icon="SearchOutlined" size="0" width="0" height="0"></icon-stub>
        </badge-stub> <span class="fx-tab-bar_item-text">搜索</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub content="1" maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <icon-stub icon="UserOutlined" size="0" width="0" height="0"></icon-stub>
        </badge-stub> <span class="fx-tab-bar_item-text">我的</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub content="100" maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <icon-stub icon="SettingOutlined" size="0" width="0" height="0"></icon-stub>
        </badge-stub> <span class="fx-tab-bar_item-text">设置</span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tab should render set options correctly 1`] = `
<div class="fx-tab-bar">
  <div class="fx-tab-bar_inner fx-horizontal-hairline fixed" style="z-index: 1;">
    <ul class="fx-tab-bar_list">
      <li class="fx-tab-bar_item active">
        <badge-stub maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <icon-stub icon="HomeOutlined" size="0" width="0" height="0"></icon-stub>
        </badge-stub> <span class="fx-tab-bar_item-text">首页</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <icon-stub icon="SearchOutlined" size="0" width="0" height="0"></icon-stub>
        </badge-stub> <span class="fx-tab-bar_item-text">搜索</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <icon-stub icon="UserOutlined" size="0" width="0" height="0"></icon-stub>
        </badge-stub> <span class="fx-tab-bar_item-text">我的</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <icon-stub icon="SettingOutlined" size="0" width="0" height="0"></icon-stub>
        </badge-stub> <span class="fx-tab-bar_item-text">设置</span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tab should render use custom icons correctly 1`] = `
<div class="fx-tab-bar">
  <div class="fx-tab-bar_inner fx-horizontal-hairline fixed" style="z-index: 1;">
    <ul class="fx-tab-bar_list">
      <li class="fx-tab-bar_item active">
        <badge-stub maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <!---->
        </badge-stub> <span class="fx-tab-bar_item-text">微信</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <!---->
        </badge-stub> <span class="fx-tab-bar_item-text">QQ</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <!---->
        </badge-stub> <span class="fx-tab-bar_item-text">微博</span>
      </li>
      <li class="fx-tab-bar_item">
        <badge-stub maxcount="99" offset="0,0" class="fx-tab-bar_item-icon">
          <!---->
        </badge-stub> <span class="fx-tab-bar_item-text">淘宝</span>
      </li>
    </ul>
  </div>
</div>
`;
